# JUI_SDL

./: .gitmodules  CMakeLists.txt  README.md
include/: Math.hpp  SDLGame.hpp  Vector2.hpp
include/JUI/: Event.hpp  Font.hpp  HorizontalLayoutContainer.hpp  NumberFormatter.h  Rect.hpp  Scene.hpp  Text.hpp  VerticalLayoutContainer.hpp  Widget.hpp  common.hpp  jui.h
include/JUI/Types/: Color.hpp  Event.hpp  Font.hpp  UDim.hpp  UDim2.hpp  Vector2.hpp
include/JUI/Widgets/: Checkbox.hpp  NineSlice.hpp  RadioButton.hpp  Rect.hpp  Scene.hpp  Text.hpp  VerticalLayoutContainer.hpp  Widget.hpp
include/TestBench/: JUIDemoGame.hpp  SDLGame.hpp
src/: SDLGame.cpp  Vector2.cpp
src/JUI/: Color.cpp
src/JUI/Types/: Color.cpp  UDim.cpp  UDim2.cpp  Vector2.cpp
src/JUI/Widgets/: Rect.cpp  Scene.cpp  Text.cpp  Widget.cpp
src/TestBench/: JUIDemoGame.cpp  SDLGame.cpp  main.cpp
tests/: CMakeLists.txt
tests/JUI/: Vector2.cpp
